gitops/apps/network-policies/network-policies.yaml
# gateway: esce solo verso i microservizi e redis
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gateway-egress
  namespace: group-5
spec:
  podSelector:
    matchLabels:
      app: gateway
  policyTypes:
    - Egress
  egress:
    - podSelector:
        matchLabels:
          app: siem-service
    - podSelector:
        matchLabels:
          app: incident-service
    - podSelector:
        matchLabels:
          app: vulnerability-service
    - podSelector:
        matchLabels:
          app: redis
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
---
# PostgreSQL: accetta solo da siem-service e incident-service
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-ingress
  namespace: group-5
spec:
  podSelector:
    matchLabels:
      app: minisiem-postgres
  policyTypes:
    - Ingress
  ingress:
    - podSelector:
        matchLabels:
          app: siem-service
    - podSelector:
        matchLabels:
          app: incident-service
---
# Redis: accetta solo dal gateway
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-ingress
  namespace: group-5
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - podSelector:
        matchLabels:
          app: gateway
